A new application was created, imports were configured, and dependencies were installed. Basic project structure, validation form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "DAYCOM"
+        "antd",
+        "DAYCOM",
+        "nabla",
+        "reduxjs",
+        "tailwindcss"
     ]
 }
