--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "5.0.1",
+    "@reduxjs/toolkit": "1.9.5",
+    "@types/react-redux": "7.1.25",
+    "antd": "5.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.5",
+    "react-router-dom": "6.11.1"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "1.5.0",
