CRUD Employee Нужно доделать загрузку аватарок

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,64 @@
 {
     "cSpell.words": [
+        "батькові",
+        "видалити",
+        "Відміна",
+        "головної",
+        "дійсно",
+        "Дніпровського",
+        "Доступ",
+        "доступу",
+        "Електронна",
+        "Журналіст",
+        "Забрати",
+        "Західного",
+        "І'мя",
+        "Інстаграм",
+        "Київського",
+        "Кореспондент",
+        "Короткий",
+        "Логін",
+        "Менеджер",
+        "Місто",
+        "Мобильній",
+        "Мобільний",
+        "надано",
+        "Надати",
+        "Оберіть",
+        "Обов'язкове",
+        "опис",
+        "пароль",
+        "Партнер",
+        "Переглянути",
+        "Південного",
+        "Підтвердити",
+        "Підтвердіть",
+        "поле",
+        "Попередження",
+        "Посада",
+        "пошта",
+        "права",
+        "Прізвище",
+        "профіль",
+        "Псевдонім",
+        "Редактор",
+        "редакції",
+        "рівень",
+        "Розміщення",
+        "співробитника",
+        "співробітника",
+        "Східного",
+        "Твітер",
+        "Телеграм",
+        "телефон",
+        "Фейсбук",
+        "хочете",
         "antd",
+        "Berear",
         "DAYCOM",
         "nabla",
         "reduxjs",
-        "tailwindcss"
+        "tailwindcss",
+        "Unknow"
     ]
 }
