--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,21 @@
 {
     "cSpell.words": [
+        "автора",
         "батькові",
+        "Біла",
+        "блок",
+        "Бориспіль",
+        "Бровари",
         "видалити",
         "Відміна",
+        "Вільна",
+        "газети",
+        "години",
+        "Головна",
+        "Головне",
         "головної",
+        "дату",
+        "Дейком",
         "дійсно",
         "Дніпровського",
         "Доступ",
@@ -11,22 +23,33 @@
         "Електронна",
         "Журналіст",
         "Забрати",
+        "Загальнонаціональна",
+        "Заголовок",
         "Західного",
         "І'мя",
+        "Ігри",
         "Інстаграм",
+        "Київ",
+        "Київська",
         "Київського",
         "Кореспондент",
         "Короткий",
         "Логін",
+        "Медіфайли",
         "Менеджер",
         "Місто",
         "Мобильній",
         "Мобільний",
         "надано",
         "Надати",
+        "Наука",
+        "новин",
+        "новини",
         "Оберіть",
+        "область",
         "Обов'язкове",
         "опис",
+        "Опубліковано",
         "пароль",
         "Партнер",
         "Переглянути",
@@ -41,22 +64,41 @@
         "Прізвище",
         "профіль",
         "Псевдонім",
+        "публікацию",
+        "публікації",
+        "публікацію",
+        "Публікація",
         "Редактор",
         "редакції",
         "рівень",
         "Розміщення",
+        "співавтора",
         "співробитника",
         "співробітника",
+        "Співробітники",
+        "Спорт",
+        "Створити",
+        "сторінка",
+        "Стрічка",
+        "стрічки",
+        "стрічку",
+        "Суспільство",
         "Східного",
+        "сьогодні",
         "Твітер",
         "Телеграм",
         "телефон",
+        "Фастів",
         "Фейсбук",
         "хочете",
+        "Церква",
+        "черзі",
         "antd",
         "Berear",
+        "Cascader",
         "DAYCOM",
         "nabla",
+        "Ptemium",
         "reduxjs",
         "tailwindcss",
         "Unknow"
