--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@reduxjs/toolkit": "1.9.5",
     "@types/react-redux": "7.1.25",
     "antd": "5.4.7",
+    "moment": "2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "2.0.0",
     "react-redux": "8.0.5",
     "react-router-dom": "6.11.1"
   },
