Add Edit Post, Delete Post. Upload Avatar, EdEmp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,66 +1,116 @@
 {
     "cSpell.words": [
         "автора",
+        "архів",
+        "Банери",
         "батькові",
         "Біла",
         "блок",
         "Бориспіль",
         "Бровари",
+        "Вивести",
+        "видалено",
         "видалити",
+        "відео",
         "Відміна",
+        "відсутні",
         "Вільна",
+        "Вінницька",
+        "Вінниця",
+        "Водяний",
+        "Волинська",
+        "Волинський",
+        "Володимир",
+        "газета",
         "газети",
+        "Гайсин",
         "години",
         "Головна",
         "Головне",
+        "Головний",
         "головної",
+        "даних",
         "дату",
         "Дейком",
         "дійсно",
+        "Дніпро",
         "Дніпровського",
+        "Дніпропетровська",
+        "Додати",
+        "Домашня",
         "Доступ",
         "доступу",
         "Електронна",
+        "Жмеринка",
         "Журналіст",
         "Забрати",
+        "завантаженні",
+        "завантажено",
+        "Завершити",
         "Загальнонаціональна",
+        "заголовком",
         "Заголовок",
+        "запис",
+        "захищено",
         "Західного",
+        "Зберегти",
+        "знак",
+        "зображення",
         "І'мя",
         "Ігри",
         "Інстаграм",
         "Київ",
         "Київська",
         "Київського",
+        "Ковель",
+        "Козятин",
         "Кореспондент",
         "Короткий",
+        "Кривий",
+        "Ладижин",
         "Логін",
+        "Луцьк",
+        "матеріал",
+        "Медіа",
         "Медіфайли",
         "Менеджер",
         "Місто",
         "Мобильній",
         "Мобільний",
+        "Могилів",
         "надано",
         "Надати",
+        "Наживо",
+        "назвою",
         "Наука",
         "новин",
         "новини",
+        "Нововолинськ",
         "Оберіть",
         "область",
+        "Обліковий",
         "Обов'язкове",
+        "оновлення",
         "опис",
         "Опубліковано",
+        "Опублікувати",
+        "Очистити",
         "пароль",
         "Партнер",
         "Переглянути",
         "Південного",
+        "Підпишіться",
         "Підтвердити",
         "Підтвердіть",
+        "Подільський",
         "поле",
+        "Помилка",
         "Попередження",
         "Посада",
         "пошта",
+        "Пошук",
         "права",
+        "Приховати",
         "Прізвище",
         "профіль",
         "Псевдонім",
@@ -68,10 +118,15 @@
         "публікації",
         "публікацію",
         "Публікація",
+        "Редагувати",
         "Редактор",
         "редакції",
         "рівень",
+        "розділ",
+        "розміром",
+        "Розміщенний",
         "Розміщення",
+        "сеанс",
         "співавтора",
         "співробитника",
         "співробітника",
@@ -85,11 +140,14 @@
         "Суспільство",
         "Східного",
         "сьогодні",
+        "Сьогоднішня",
         "Твітер",
         "Телеграм",
         "телефон",
+        "успішно",
         "Фастів",
         "Фейсбук",
+        "Хмільник",
         "хочете",
         "Церква",
         "черзі",
@@ -97,6 +155,7 @@
         "Berear",
         "Cascader",
         "DAYCOM",
+        "LOGOTIP",
         "nabla",
         "Ptemium",
         "reduxjs",
