--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "1.9.5",
     "@types/react-redux": "7.1.25",
     "antd": "5.4.7",
+    "dayjs": "1.11.7",
     "moment": "2.29.4",
     "quill-image-drop-module": "1.0.3",
     "quill-image-resize-module": "3.0.0",
